--- a/Week7/NorthwindRazorPages/NorthwindRazorPages/Pages/Employees/Index.cshtml
+++ b/Week7/NorthwindRazorPages/NorthwindRazorPages/Pages/Employees/Index.cshtml
@@ -53,13 +53,13 @@
                 @Html.DisplayNameFor(model => model.Employee[0].Extension)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Employee[0].Photo)
+               <!-- @Html.DisplayNameFor(model => model.Employee[0].Photo) --> 
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Employee[0].Notes)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Employee[0].PhotoPath)
+               <!-- @Html.DisplayNameFor(model => model.Employee[0].PhotoPath) --> 
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Employee[0].ReportsToNavigation)
@@ -110,13 +110,13 @@
                 @Html.DisplayFor(modelItem => item.Extension)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Photo)
+               <!-- @Html.DisplayFor(modelItem => item.Photo) --> 
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Notes)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.PhotoPath)
+               <!-- @Html.DisplayFor(modelItem => item.PhotoPath) --> 
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ReportsToNavigation.EmployeeId)
